<resources>
    <string name="app_name">Therapy Support App</string>
    <string name="title_today">Heute</string>
    <string name="title_drug_plan">Medikamentenplan</string>
    <string name="title_calendar">Kalender</string>
    <string name="title_settings">Einstellungen</string>


    <string name="add_medicine">Medizin hinzufügen</string>


    <string name="drug_name_description">Name des Medikaments</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_note">Notiz hinzufügen</string>
    <string name="title_mood">Stimmung hinzufügen</string>
    <string name="title_food">Mahlzeit hinzufügen</string>
    <string name="breakfast">Frühstück</string>
    <string name="snack">Snack</string>
    <string name="lunch">Mittagessen</string>
    <string name="dinner">Abendessen</string>
    <string name="food_hint">Mahlzeit</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="drug">Medikament</string>
    <string name="save">Speichern</string>
    <string name="alarm">Alarm</string>
    <string name="running_time">Laufzeit</string>
    <string name="taking_pattern">Einnahmemuster</string>
    <string name="defined_end_date">Definiertes Enddatum</string>
    <string name="unlimited_term">Unbegretzte Laufzeit</string>
    <string name="term_in_days">Laufzeit in Tagen</string>
    <string name="daily_day">Täglich, N mal pro Tag</string>
    <string name="daily_hour">Täglich, alle N Stunden</string>
    <string name="all_day">Alle N Tage</string>
    <string name="weekdays">Ausgewählte Wochentage</string>
    <string name="cycle">Zyklus\n(N Tage aktiv, M Tage pausiert)</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>
    <string name="drug_detail">Detail</string>
    <string name="silent">Stumm</string>
    <string name="no_notification">Keine Erinnerung</string>
    <string name="silent_notification">Stumme Erinnerung</string>
    <string name="only_vibration">Nur Vibration</string>
    <string name="discrete_notification">Diskrete Erinnerung</string>
    <string name="recurring_reminder">Wiederkehrende Erinnerungen</string>
    <string name="notification">Benachrichtigungston</string>
    <string name="add_photo">Foto hinzufügen</string>
    <string name="add">Hinzufügen</string>
    <string name="how_do_you_feel_today">Wie fühlen Sie sich heute?</string>
    <string name="depressive">Depressiv</string>
    <string name="manic">Manisch</string>
    <string name="more_time">Mehr Zeit?</string>
    <string name="extended_input">Erweiterte Eingabe</string>
    <string name="concerned">Besorgt</string>
    <string name="carefree">Unbeschwert</string>
    <string name="distracted">Abgelenkt</string>
    <string name="concentrated">Konzentriert</string>
    <string name="anxious">Ängstlich</string>
    <string name="furchtlos">fearless</string>
    <string name="worthless">Wertlos</string>
    <string name="precious">Wertvoll</string>
    <string name="tired">Müde</string>
    <string name="energetically">Energetisch</string>
    <string name="lonely">Einsam</string>
    <string name="involved">Beteiligt</string>
    <string name="hopeless">Hoffnungslos</string>
    <string name="hopeful">Hoffnungsvoll</string>
    <string name="cumbersome">Schwerfällig</string>
    <string name="nimbly">Leichtfüßig</string>
    <string name="add_note_dot_dot_dot">Notiz hinzufügen...</string>
    <string name="add_video">Video hinzufügen</string>
    <string name="scan_barcode">Barcode Scannen</string>
    <string name="hyphen_or_hyphen">- ODER -</string>
    <string name="m_continue">Weiter</string>
    <string name="sound">Ton</string>
    <string name="on_these_weekdays">An folgenden Wochentagen:</string>
    <string name="taken_medicine">Eingenommene Medikamente:</string>
    <string name="notes_colon">Notizen:</string>
    <string name="food_colon">Mahlzeiten:</string>
    <string name="add_taking_time">Einnahmezeit hinzufügen</string>
    <string name="next_alarm">Nächster Alarm:</string>
    <string name="please_add_medicine_first">- Bitte fügen Sie zuerst ein Medikament hinzu -</string>
    <string name="mooddiary_listings">Stimmungstagebuch Einträge:</string>
    <string name="note">Notiz</string>
    <string name="less_time">Weniger Zeit?</string>
    <string name="confirmed">Bestätigt</string>
    <string name="skipped">Übersprungen</string>
    <string name="january">Januar</string>
    <string name="february">Februar</string>
    <string name="march">März</string>
    <string name="april">April</string>
    <string name="may">Mai</string>
    <string name="june">Juni</string>
    <string name="july">Juli</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">Oktober</string>
    <string name="november">November</string>
    <string name="december">Dezember</string>
    <string name="vibration">Vibration</string>
    <string name="no_alarm_set">- Keine Alarme vorhanden -</string>
    <string name="daily_notification">Tägliche Erinnerung</string>
    <string name="database_export">Datenbank Export</string>
    <string name="imprint">Impressum</string>
    <string name="title_imprint">Impressum</string>
    <string name="fearless">Furchtlos</string>
</resources>
