<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="michaelbumes.therapysupportapp.fragments.AlarmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switch_alarm_recurring_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recurring_reminder"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:text="Aktivieren Sie diese Funktion, um alle fünf Minuten errinert zu werden, bis Sie die Aufgabe bestätigt oder übersprungen haben"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>-->


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radio_group_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_button_alarm_standard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/alarm"
                        android:textAlignment="textStart"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_button_alarm_sound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/notification"
                        android:textAlignment="textStart"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/silent"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <RadioButton
                        android:id="@+id/radio_button_alarm_no_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/no_notification"
                        android:textAlignment="textStart"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_button_alarm_silent_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/silent_notification"
                        android:textAlignment="textStart"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_button_alarm_only_vibrate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/vibration"
                        android:textAlignment="textStart"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_button_alarm_discrete_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/discrete_notification"
                        android:textAlignment="textStart"
                        android:textSize="18sp" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:id="@+id/card_view_alarm_discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/list_view_alarm_discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />



                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/on_these_weekdays"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                    <CheckBox
                        android:id="@+id/check_box_alarm_monday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:paddingStart="30dp"
                        android:text="@string/monday"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/check_box_alarm_tuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:paddingStart="30dp"
                        android:text="@string/tuesday"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/check_box_alarm_wednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:paddingStart="30dp"
                        android:text="@string/wednesday"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/check_box_alarm_thursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:paddingStart="30dp"
                        android:text="@string/thursday"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/check_box_alarm_friday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:paddingStart="30dp"
                        android:text="@string/friday"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/check_box_alarm_saturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:paddingStart="30dp"
                        android:text="@string/saturday"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/check_box_alarm_sunday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:paddingStart="30dp"
                        android:text="@string/sunday"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>