<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="michaelbumes.therapysupportapp.fragments.TakingPatternFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_taking_patern_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radio_group_taking_pattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_daily_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="12dp"
                android:layoutDirection="rtl"
                android:text="@string/daily_day"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_button_daily_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="12dp"
                android:layoutDirection="rtl"
                android:text="@string/daily_hour"
                android:textAlignment="textStart"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_all_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="12dp"
                android:layoutDirection="rtl"
                android:text="@string/all_day"
                android:textAlignment="textStart"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_button_weekdays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="12dp"
                android:layoutDirection="rtl"
                android:text="@string/weekdays"
                android:textAlignment="textStart"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_button_cycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="12dp"
                android:layoutDirection="rtl"
                android:text="@string/cycle"
                android:textAlignment="textStart"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:id="@+id/card_view_taking_pattern_check_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_box_taking_pattern_monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_margin="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="30dp"
                android:text="@string/monday" />
            <CheckBox
                android:id="@+id/check_box_taking_pattern_tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_margin="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="30dp"
                android:text="@string/tuesday" />
            <CheckBox
                android:id="@+id/check_box_taking_pattern_wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_margin="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="30dp"
                android:text="@string/wednesday" />
            <CheckBox
                android:id="@+id/check_box_taking_pattern_thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_margin="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="30dp"
                android:text="@string/thursday" />
            <CheckBox
                android:id="@+id/check_box_taking_pattern_friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_margin="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="30dp"
                android:text="@string/friday" />
            <CheckBox
                android:id="@+id/check_box_taking_pattern_saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="30dp"
                android:text="@string/saturday" />
            <CheckBox
                android:id="@+id/check_box_taking_pattern_sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="30dp"
                android:text="@string/sunday" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    </ScrollView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:id="@+id/card_view_taking_pattern_list_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/list_view_taking_pattern_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:id="@+id/card_view_taking_pattern_list_cycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/list_view_taking_pattern_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:id="@+id/card_view_taking_pattern_daily_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/list_view_taking_pattern_daily_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.v7.widget.CardView>

</LinearLayout>
