<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="michaelbumes.therapysupportapp.activities.FoodActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/text_edit_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/food_hint" />

            <Button
                android:id="@+id/photo_button_food"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_edit_food"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_accent"
                android:drawableStart="@drawable/ic_camera_alt_black_24dp"
                android:drawablePadding="-10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:text="@string/add_photo"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <RadioGroup
                android:id="@+id/radio_group_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo_button_food"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_food_snack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack" />

                <RadioButton
                    android:id="@+id/radio_button_food_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast" />

                <RadioButton
                    android:id="@+id/radio_button_food_snack1"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack" />

                <RadioButton
                    android:id="@+id/radio_button_food_lunch"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch" />

                <RadioButton
                    android:id="@+id/radio_button_food_snack2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack" />

                <RadioButton
                    android:id="@+id/radio_button_food_dinner"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner" />

                <RadioButton
                    android:id="@+id/radio_button_food_snack3"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack" />

            </RadioGroup>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/ad_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:background="@drawable/custom_button_fade"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/grey9"
        android:textSize="18sp" />

    <ImageView

        android:id="@+id/image_view_food"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/ad_food"
        android:layout_below="@+id/card_view_food"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@color/transparent"
        android:contentDescription="ImageView for Food" />

</RelativeLayout>