<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="michaelbumes.therapysupportapp.fragments.AddMedicineFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/edit_drug_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drug_name_description"
        android:inputType="textEmailSubject" />


    <Button
        android:id="@+id/qr_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_or"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button_accent"
        android:drawableStart="@drawable/ic_camera_alt_black_24dp"
        android:drawablePadding="-10dp"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:text="@string/scan_barcode"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/text_view_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_drug_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/hyphen_or_hyphen"
        android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/store_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_button_fade"
        android:text="@string/m_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


</RelativeLayout>